--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-.motion-videos iframe{
-}
 
 .nav-bar ul{
     list-style: none;
@@ -28,7 +26,6 @@ nav{
     height: 54px;
     background-color: #182025;
     z-index: 1;
-    margin-bottom: ;
 }
 
 
@@ -189,6 +186,17 @@ font-weight: 600;
     font-weight: 500;
     color: #e9e9e9;
 }
+
+.resume{
+    margin: auto;
+    width: 400px;
+    padding: 20px;
+    color: white;
+    border: 1px white solid;
+    text-align: center;
+    border-radius: 10px;
+}
+
 
 @media only screen and (max-width: 1200px) {
     .motion-videos{
