--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,10 @@ body{
     top: 54px;
     z-index: 1;
 }
+.fixed + .motion-videos {
+    padding-top: 60px;
+  }
+  
 a {
     color: #e9e9e9;
     text-decoration: none; /* no underline */
@@ -322,5 +326,8 @@ font-weight: 600;
     .resume{
         width: 300px;
     }
+    .fixed + .motion-videos {
+        padding-top: 50px;
+      }
 
 }
