--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,9 @@ content: "CLICK!";
 
 
 @media only screen and (max-width: 600px) {
+    .circle, .click{
+        display: none;
+    }
     .desktop-lottie{
         display: none;
     }
@@ -192,10 +195,19 @@ content: "CLICK!";
     }
 
     .inner-section{
-        max-width:100vw;
+        max-width:100%;
 
     }
-    
+    .video-box{
+        width: 100vw;
+    }
+    video,img{
+        max-width: 100vw;
+    }
+
+    .middle-text{
+        font-size: 26px
+    }
     .box1{
         max-width: 100%;
     }
