--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ scrollbar-width: none; /* Firefox */
 
 }
 .inner-section{
-    max-width:1920px;
+    max-width:100vw;
     display: flex;
     align-content: center;
     overflow: hidden;
@@ -39,8 +39,7 @@ scrollbar-width: none; /* Firefox */
 }
 
 .main-section{
-    width: 100vw;
-    height: fit-content;
+    max-width: 1920px;
     display: flex;
     justify-content: center; 
 }
@@ -78,7 +77,7 @@ p{
     align-self: center;
 }
 
-video, img{
+.box1 video, .box1 img{
     max-height:300px;
     display: flex;
     outline: none;
@@ -89,6 +88,10 @@ video, img{
 .video-box{
     max-width: 800px;
 }
+img{
+    max-width: inherit;
+}
+
 .text-box{
     padding: 20px;
 }
@@ -99,6 +102,62 @@ clip-path: inset(2px 2px);
 .middle-text{
 font-size: 48px;
 margin: 45px;
+}
+a {
+    all: unset;
+}
+
+.title1{
+    font-size: 52px;
+}
+
+.title2{
+    font-size: 38px;
+}
+
+
+.subtitle{
+    font-size: 24px;
+}
+
+
+.main-page{
+    min-width: 10px;
+    max-width: 1920px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+}
+
+
+.video-box-large{
+    display: flex;
+    max-width: 100%;
+    justify-content: center;
+
+}
+
+iframe{
+    width: 100%;
+}
+
+.page{
+    max-width: 820px;
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+}
+
+.home-page{
+    max-width: 1020px;
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+}
+
+.flex{
+    max-width: inherit;
+    display: flex;
 }
 
 
@@ -180,6 +239,18 @@ content: "CLICK!";
 
 .hide{
     display: none;
+}
+
+.text-box{
+    max-width: 600px;
+}
+
+.left-align{
+    align-items: start;
+    padding: 0px;
+}
+p{
+    padding: 0px;
 }
 
 
