--- a/styles.css
+++ b/styles.css
@@ -273,9 +273,22 @@ p{
         width: 100vw;
     }
     video,img{
-        max-width: 100vw;
+        max-width: 100%;
+    }
+    .page{
+        max-width: 90%;
     }
 
+    .title1{
+        font-size: 38px;
+    }
+
+    .subtitle{
+        font-size: 16px;
+    }
+    .title2{
+        font-size: 28px;
+    }
     .middle-text{
         font-size: 26px
     }
