--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,8 @@ scrollbar-width: none; /* Firefox */
     font-size: 42px;
 }
 h2{
-    font-family: "reckless";
+    font-family: "Playfair Display";
+    font-weight: 500;
     font-size: 42px;
     margin: 5px 0px;
 }
@@ -141,7 +142,33 @@ p{
 
 }
 
+.nda-form{
+    max-width: 600px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+    border-radius: 10px;
+}
 
+.nda-show{
+    display: block;
+    transition: all .3s;
+}
+
+.nda-remove{
+    display: none;
+    transition: all .3s;
+}
+
+.form-overlay{
+    position: fixed;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.479);
+}
 /* .drop-shadow{
     -webkit-box-shadow: 0px 10px 46px -18px rgba(0,0,0,0.46);
     -moz-box-shadow: 0px 10px 46px -18px rgba(0,0,0,0.46);
@@ -153,7 +180,7 @@ p{
 }
 
 .regular{
-    font-family: "reckless";
+    font-family: "Playfair Display";
 }
 .align-center{
     align-self: center;
@@ -230,6 +257,14 @@ iframe{
     flex-direction: column;
 }
 
+.width-hack{
+    min-width: 90vw;
+}
+iframe {
+    height: auto;
+    width: 100%;
+    aspect-ratio: 16 / 9;
+  }
 .home-page{
     max-width: 1020px;
     display: flex;
@@ -258,7 +293,7 @@ cursor: none;
 
 .click{
 font-size: 16px;
-font-family: "reckless";
+font-family: "Playfair Display";
 font-weight: light;
 z-index:100;
 color: white;
@@ -268,7 +303,7 @@ height: var(--circle-size);
 width: var(--circle-size);
 display: none;
 top: 10px;
-left: 2px;
+left: 0px;
 pointer-events: none;
 z-index: 100;
 transition: width 0.3s ease, height 0.3s ease;
@@ -381,7 +416,7 @@ p{
 
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
     .circle, .click{
         display: none;
     }
@@ -399,13 +434,22 @@ p{
 
     }
     .video-box{
-        width: 100vw;
+        width: 100%;
+    }
+
+
+    .video-box img{
+        max-height: none;
     }
     video,img{
         max-width: 100%;
     }
     .page{
         max-width: 90%;
+    }
+
+    .home-page{
+        align-items: center;
     }
 
     .title1{
@@ -426,5 +470,6 @@ p{
     }
     .flex-row{
         flex-direction: column;
+        align-items: center;
     }
   }
