--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,9 @@ p{
         width: 100%;
     }
 
-
+    .nda-form{
+        max-height: min-content;
+    }
     .video-box img{
         max-height: none;
     }
