--- a/styles.css
+++ b/styles.css
@@ -332,12 +332,20 @@ iframe{
 }
 
 .button{
+    width: max-content;
     display: flex;
     align-self: center;
     transition: all .3s;
+    background-color: black;
+    padding: 10px 15px;
+
+    border-radius: 10px;
 
 }
 
+.btn-lottie{
+    max-width: 40px;
+}
 .button:hover{
     transform: translate(0px,-50px) scale(180%);
     transition: all .3s;
@@ -346,16 +354,13 @@ iframe{
 
 .button a{
     width: 100%;
-    background-color: black;
     color: white;
-    border-radius: 10px;
     border-width: 0;
-    padding: 5px 15px;
 }
 .button h2{
     font-family: "Playfair Display";
     font-size: 22px;
-
+    padding: 10px;
 }
 .page{
     max-width: 820px;
