--- a/styles.css
+++ b/styles.css
@@ -530,7 +530,9 @@ p{
     color: grey;
 }
 
-
+video{
+    max-width: 100%;
+}
 
 @media only screen and (max-width: 768px) {
     .circle, .click{
