--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,7 @@ scrollbar-width: none; /* Firefox */
     height: 529px;
 }
 .hero-right{
+    margin-left: 20px;
     justify-content: space-between;
     width: 551px;
     height: 529px;
@@ -217,18 +218,29 @@ scrollbar-width: none; /* Firefox */
 }
 
 
-.hero-section{
+/* .hero-section{
+    background-color: black;
     width: 100vw;
     height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
+} */
+.hero-section {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: black; */
 }
-.main-section{
+.main-wrapper{
     width: 952px;
+    height: 529.5px;
     display: flex;
     justify-content: space-between; 
 }
+
 .box1{
     display: flex;
     /* background-color: aqua; */
@@ -624,6 +636,9 @@ p{
 }
 
 @media only screen and (max-width: 768px) {
+    .hero-section{
+        height: 50vh;
+    }
     .circle, .click{
         display: none;
     }
@@ -642,6 +657,7 @@ p{
     }
     .video-box{
         width: 100%;
+        
     }
 
     .nda-form{
@@ -652,10 +668,10 @@ p{
     .form-overlay iframe{
         aspect-ratio: none;
     }
-    .video-box img{
+    /* .video-box img{
         max-height: none;
-    }
-    video,img{
+    } */
+    .video-box video, .video-box img{
         max-width: 100%;
     }
     .page{
@@ -680,7 +696,8 @@ p{
         font-size: 26px
     }
     .box1{
-        max-width: 100%;
+        max-width: 100vw;
+        
     }
     .flex-row{
         flex-direction: column;
