--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,9 @@ scrollbar-width: none; /* Firefox */
     max-width: 551px;
 }
 .hero-video-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 350px;
     overflow: hidden;
     border-radius: 14px;
@@ -228,6 +231,8 @@ scrollbar-width: none; /* Firefox */
 } */
 .hero-section {
     width: 100vw;
+    max-width: 952px;
+    max-height: 80vh;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -258,6 +263,14 @@ h2{
     font-family: "Playfair Display";
     font-weight: 500;
     font-size: 42px;
+    margin: 5px 0px;
+}
+
+h3{
+    font-family: "Playfair Display";
+    font-weight: 500;
+    text-align: center;
+    font-size: 32px;
     margin: 5px 0px;
 }
 p{
@@ -330,7 +343,8 @@ img{
     padding: 20px;
 }
 video, img {
-clip-path: inset(2px 2px);
+    border-radius: 14px;
+/* clip-path: inset(2px 2px); */
 }
 
 .middle-text{
@@ -467,9 +481,8 @@ iframe{
   #project-name {
     position: absolute;
     bottom: 20px;
-    left: 20px;
-    right: 0;
-    text-align: left;
+    right: 50px;
+    text-align: right;
     color: white;
     font-size: 1.4em;
     font-family: "arialnarrow";
@@ -637,8 +650,27 @@ p{
 
 @media only screen and (max-width: 768px) {
     .hero-section{
-        height: 50vh;
+        height: 100vh;
     }
+    .main-wrapper{
+        flex-direction: column;
+        align-items: center;
+        height: min-content;
+        transform: scale(.7) !important;
+    }
+    .hero-left{
+        width: 100%;
+        height: 550px;
+        overflow: hidden;
+    }
+    .hero-left canvas{
+        width: 100%;
+    }
+    .hero-right{
+        margin-left: 0px;
+
+    }
+
     .circle, .click{
         display: none;
     }
