--- a/styles.css
+++ b/styles.css
@@ -274,8 +274,8 @@ h3{
     margin: 5px 0px;
 }
 p{
-    font-family: "Switzer" !important;
-    font-size: 18px;
+    font-family: "Arial Narrow" !important;
+    font-size: 24px;
     margin: 5px 0px;
 
 }
@@ -451,6 +451,11 @@ iframe{
     width: 100%;
     aspect-ratio: 16 / 9;
   }
+
+  .video-box-large img, .video-box-large video {
+border-radius: 0px;
+margin: 5px;
+  }
 .home-page{
     max-width: 1020px;
     display: flex;
@@ -485,7 +490,7 @@ iframe{
     text-align: right;
     color: white;
     font-size: 1.4em;
-    font-family: "arialnarrow";
+    font-family: "Arial Narrow";
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     pointer-events: none;
   }
@@ -650,7 +655,7 @@ p{
 
 @media only screen and (max-width: 768px) {
     .hero-section{
-        height: 100vh;
+        min-height: 100vh;
     }
     .main-wrapper{
         flex-direction: column;
@@ -670,7 +675,9 @@ p{
         margin-left: 0px;
 
     }
-
+    video,img{
+        border-radius: unset;
+    }
     .circle, .click{
         display: none;
     }
@@ -691,6 +698,7 @@ p{
         width: 100%;
         
     }
+    
 
     .nda-form{
         min-height: 550px;
